# server/app/Models/Video.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Video extends Model
+{
+    use HasFactory;
+
+
+    protected $fillable = [
+        'user_id', 'title', 'description', 'file_path'
+    ];
+
+
+    protected $casts = [
+        'created_at' => 'datetime',
+    ];
+
+
+    public function user()
+    {
+        return $this->belongsTo(User::class);
+    }
+}
